# qa-automation-learning-Dianov_Alexandr

./: README.md  pytest.ini  todolist.py
pytest_tests/: README.md  main.py  pyproject.toml  todolist.py
pytest_tests/tests/: conftest.py  test_add_complete.py  test_delete.py  test_main.py  test_task.py
